<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Utzon</string>
    <string name="maps_apikey_debug">0fMYQWA7ahuZ_tS6tvDLZEzZyJOfYAwyAtPRJtQ</string>
    <string name="search_hint">Search points of interest</string>
    <string name="menu_search">Search</string>
    <string name="menu_center_location">Center on current location</string>
    <string name="menu_augmented">Augmented reality navigation</string>
    <string name="menu_poi_list">List of available POIs</string>
    <string name="menu_outdoor">Display outdoor map</string>
    <string name="menu_indoor">Display indoor map</string>
    <string name="menu_settings">Configure settings</string>
    <string name="menu_refresh">Re-synchronize with server</string>
    <string name="remote_service_label">SampleServiceLabel</string>
    <string name="remote_service_started">SampleServiceStarted</string>
    <string name="remote_service_stopped">SampleServiceStopped</string>
    <string name="remote_service_connected">Service connected</string>
    <string name="remote_service_disconnected">Service disconnected</string>
    <string name="main_screen_text">Welcome to TACO! The best location thingie around.</string>
    <string name="spinner_prompt">Choose an audio file</string>

</resources>