<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/menugroup_outdoor" >

        <item
            android:id="@+id/actionbar_search"
            android:icon="@drawable/search"
            android:orderInCategory="1"
            android:showAsAction="always|withText|collapseActionView"
            android:title="@string/menu_search"
            android:actionViewClass="android.widget.SearchView" />

        <item
            android:id="@+id/actionbar_center_location"
            android:icon="@drawable/centerlocation"
            android:orderInCategory="2"
            android:showAsAction="ifRoom"
            android:title="@string/menu_center_location"/>

        <item
            android:id="@+id/actionbar_augmented"
            android:icon="@drawable/augmented"
            android:orderInCategory="3"
            android:showAsAction="ifRoom"
            android:title="@string/menu_augmented"/>

        <item
            android:id="@+id/actionbar_poi_list"
            android:icon="@drawable/poilist"
            android:orderInCategory="4"
            android:showAsAction="ifRoom"
            android:title="@string/menu_poi_list"/>
    </group>

</menu>